# TextureFilteringLab

./: CMakeLists.txt  glad.c  readme.md
ext/gl/glad/: glad.h
ext/gl/glm/: CMakeLists.txt
ext/gl/glm/detail/: func_common.inl  func_common_simd.inl  func_matrix_simd.inl  setup.hpp  type_quat.hpp  type_quat.inl
ext/gl/glm/ext/: matrix_relational.hpp  matrix_relational.inl  scalar_float_sized.hpp  scalar_int_sized.hpp  scalar_relational.hpp  scalar_relational.inl  vector_relational.hpp  vector_relational.inl
ext/gl/glm/gtc/: type_aligned.hpp  type_precision.hpp  ulp.hpp
ext/gl/glm/gtx/: associated_min_max.hpp  bit.hpp  closest_point.hpp  color_encoding.hpp  color_space.hpp  color_space_YCoCg.hpp  common.hpp  compatibility.hpp  component_wise.hpp  dual_quaternion.hpp  easing.hpp  euler_angles.hpp  extend.hpp  extended_min_max.hpp  exterior_product.hpp  fast_exponential.hpp  fast_square_root.hpp  fast_trigonometry.hpp  functions.hpp  gradient_paint.hpp  handed_coordinate_space.hpp  hash.hpp  integer.hpp  intersect.hpp  io.hpp  log_base.hpp  matrix_cross_product.hpp  matrix_decompose.hpp  matrix_decompose.inl  matrix_factorisation.hpp  matrix_interpolation.hpp  matrix_major_storage.hpp  matrix_operation.hpp  matrix_query.hpp  matrix_transform_2d.hpp  mixed_product.hpp  norm.hpp  normal.hpp  number_precision.hpp  optimum_pow.hpp  (+21 more)
shader/: fragment.glsl  vertex.glsl
src/: TextureFilteringScene.cpp  TextureFilteringScene.h  main.cpp
tools/: SpriteRenderer.cpp  SpriteRenderer.h  Texture2D.cpp  stb_image.h
